@@ -32,6 +32,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #27778: Fix a memory leak in os.getrandom() when the getrandom() is
+  interrupted by a signal and a signal handler raises a Python exception.
+
 - Issue #28200: Fix memory leak on Windows in the os module (fix
   path_converter() function).
 
